src/test/ui/derives/derives-span-PartialOrd-tuple-struct.stderr
error[E0277]: can't compare `Error` with `Error`
  --> $DIR/derives-span-PartialOrd-tuple-struct.rs:8:5
   |
LL | #[derive(PartialOrd,PartialEq)]
   |          ---------- in this derive macro expansion
LL | struct Struct(
LL |     Error
   |     ^^^^^ no implementation for `Error < Error` and `Error > Error`
   |
   = help: the trait `PartialOrd` is not implemented for `Error`
   = note: this error originates in the derive macro `PartialOrd` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
